Fix Snackbar z-index
Former-commit-id: 75ebf6361786c3b5d65de069ac3f8191db4ae26f
Former-commit-id: 0fc901cc8bc3a2762e47ff98a747a31f529089f7

--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -46,6 +46,7 @@ body
 	--sidebar-z-index : 1;
 	--header-z-index : 2;
 	--slideshow-z-index : 3;
+	--notifications-z-index : 4;
 
 	--button-on-background-background-color : rgba(0, 0, 0, 0.6);
 	--button-on-background-color : var(--white-color);
